manifest-files/filebeat.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat
  namespace: elk
  labels:
    app: filebeat
spec:
  selector:
    matchLabels:
      app: filebeat
  template:
    metadata:
      labels:
        app: filebeat
    spec:
      serviceAccountName: filebeat
      containers:
        - name: filebeat
          image: docker.elastic.co/beats/filebeat:7.10.0
          args: ["-e", "-c", "/etc/filebeat/filebeat.yml"]
          volumeMounts:
            - name: filebeat-config
              mountPath: /etc/filebeat/filebeat.yml
              subPath: filebeat.yml
            - name: var-log
              mountPath: /var/log
      volumes:
        - name: filebeat-config
          configMap:
            name: filebeat-config
        - name: var-log
          hostPath:
            path: /var/log
