manifest-files/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  labels: 
    app: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template: 
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: flaskappsregistry.azurecr.io/flask-container:latest
        ports:
        - containerPort: 5000
