manifest-files/ingress.yaml
# base-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.nilssonsstadtjanst.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: kibana-ingress
#   namespace: elk
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}, {"HTTP": 8000}]'
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
#     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
#     alb.ingress.kubernetes.io/healthcheck-path: /health
#     alb.ingress.kubernetes.io/success-codes: '200'
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
# spec:
#   ingressClassName: nginx
#   tls:
#   - hosts:
#     - elk-kibana.prodxcloud.io
#     secretName: elk-kibana-tls
#   rules:
#   - host: elk-kibana.prodxcloud.io
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: kibana
#             port:
#               number: 5601
